﻿1.3.4 (in progress)
  * Started working on a treeview that shows in which files an item is used
	* Problem is treeviews do not allow for multi-select (delete, export, etc)

1.3.3
  * Made picturebox a little bigger, and moved outside of bounds of main window for better ergonomics
  * Added image-preview checkbox to not have to alt-click on an image to trigger display
  * Added some extra checking for file path operations
  * Fixed some thread-safety issues
  * Added "Launch External" to context menu to launch a file with it's associated external program
  * Switched search method, 2x faster, especially on extra large folders (2000+ files)
  * Ordered files in list
  * Prevent from searching for a reference of oneself (foo.css inside foo.css)
  * Made form resizable
  * Added button to cancel a search in progress in case of long running instance

1.3.2
  * Fixed problems with certain case insensitive searches
  * Made picturebox bigger

1.3.1
  * Added SVG, CSS, JS to default item list
  * Added scss to default files list
  * Made search culture-invariant / case-insensitive
  * Added Visual Studio: Enterprise & Community to supported platform list

1.3
  * Alt-Click in list will show image thumbnail if it's an image
  * Double-Click on list will open & set focus to item in solution explorer (VSIX only)
  * Shell integration (EXE only)
    - Add/Remove from Help menu, or register/unregister from command line with -s t
  * More file stats

1.2
  * Changed UI a bit
  * Context menus
    - Select All
    - Select Other
    - Export Selection
    - Delete Selection
    - Explore Here
    - Verify Existence (VSIX only: launches automated VS file search)
      - In Solution
      - In Project
  * Command line parameters (EXE only)
    -p path
    -r report type
    -f find regexp
    -i inside regexp
  * Help Menu
    - Manual
    - Changelog
    - Website
    - About
    - License
  * More file stats
  * More error handling

1.1