@@ -154,6 +154,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\down.png" />
     <Content Include="assets\launch.png" />
     <Content Include="screen-main.png" />
     <Content Include="screen-search.png" />
