@@ -11,5 +11,12 @@
     <Setting Name="Search" Type="System.String" Scope="User">
       <Value Profile="(Default)">\.(htm|html|aspx|ascx|master|cshtml|js|css|less)$</Value>
     </Setting>
+    <Setting Name="Setting" Type="System.String[]" Scope="User">
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;string&gt;\.(gif|png|jpg|jpeg|bmp|ico|pdf|js|css|eot|svg|ttf|eot|otf|woff|woff2)$&lt;/string&gt;
+  &lt;string&gt;\.(gif|png|jpg|jpeg|bmp|ico)$&lt;/string&gt;
+&lt;/ArrayOfString&gt;</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
