@@ -6,15 +6,25 @@
     </sectionGroup>
   </configSections>
   <userSettings>
+    <!-- http://stackoverflow.com/a/4267845 -->
     <ITechnologyNET.FindUnusedFiles.Properties.Settings>
       <setting name="Directory" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Find" serializeAs="String">
         <value>\.(gif|png|jpg|jpeg|bmp|ico|pdf|js|css|eot|svg|ttf|eot|otf|woff|woff2)$</value>
       </setting>
       <setting name="Search" serializeAs="String">
         <value>\.(htm|html|aspx|ascx|master|cshtml|js|css|less)$</value>
+      </setting>
+      <setting name="Setting" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>\.(gif|png|jpg|jpeg|bmp|ico|pdf|js|css|eot|svg|ttf|eot|otf|woff|woff2)$</string>
+            <string>\.(gif|png|jpg|jpeg|bmp|ico)$</string>
+          </ArrayOfString>
+        </value>
       </setting>
     </ITechnologyNET.FindUnusedFiles.Properties.Settings>
   </userSettings>
