@@ -1,4 +1,6 @@
 ﻿1.3.4 (in progress)
+  * Implementing a pseudo-dropdown for autocompleting search/find patterns
+	* Items can be stored in settings.settings
   * Started working on a treeview that shows in which files an item is used
 	* Problem is treeviews do not allow for multi-select (delete, export, etc)
 
